Resort to --class-path when bootstrapping Bach.java
Fixes #111